# CODD_testovoe

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: main.py
backend/core/: config.py  error_handlers.py  errors.py  events.py
backend/core/settings/: app.py
backend/db/: db_utils.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 86cadd165924_init_database.py
backend/db/queries/: queries.pyi
backend/db/queries/sql/: news.sql
backend/repositories/: news.py
backend/routes/: api.py  news.py
backend/schemas/: news.py
backend/services/: news.py
parser/: main.py  settings.py
parser/db/: connect.py
parser/services/: service.py
